--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flwr
-scikit-learn
-pandas
-numpy
-matplotlib
+flwr==1.20.0
+ray==2.33.0
+numpy>=1.24,<2
+scikit-learn>=1.3,<1.6
+pandas>=2.0,<3
+matplotlib>=3.7,<4
